# eltools

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  aldcopy.sh  autogen.sh  configure.ac  findport.sh  keymap.sh  lmpmpi.sh  onchange.sh  progress.sh  rebuildlatex.sh
githooks/: pre-commit
src/: aldcopy.sh  changelogfiles.sh  changelogline.sh  changelogupdate.sh  default.txt  element2mass.py  executequicksynergy.sh  fetchall.sh  gitarchiveinit.sh  githubrepos.sh  gitoliterepos.sh  kerbalpodcast-dl.sh  latexrefre.sh  lmpmpi.sh  lmprun.sh  makesearch.sh  mass2element.py  matstudlicense.sh  mountasuser.sh  o  onchange.sh  pacman-disowned.sh  parallel.sh  pullall.sh  pushall.sh  queue.sh  randomstring.sh  reaxspecies.sh  runxclock.sh  screenshot.sh  time.sh  transpose.sh  twowaysync.sh  watchscroll.sh  xzdir.sh  z
src/bash/: xzdir.sh
src/chem/: temp2vel.py
src/desktop/: i3background.sh  keymap.sh  runxclock.sh  scrollevince.sh
src/git/: changelogline.sh  changelogupdate.sh  gitarchiveinit.sh  gitfilter.sh  pullall.sh  pushall.sh  unstagedfiles.sh
src/interactive/: battery.sh  cinestarov.sh  ensnbautoadmin.sh  i3-batterycheck.sh  wettermail.sh
src/mount/: umountasuser.sh
src/pdflatex/: countcolorpages.sh  latexrefre.sh
